examples/datalog/17_rule_commands/19_rule_overwrite.dl.out
Connecting to server at http://127.0.0.1:8080...
Connected!

Server status: healthy
Current knowledge graph: default

> .kg create test_overwrite
Knowledge graph 'test_overwrite' created.
Switched to knowledge graph: test_overwrite
> .kg use test_overwrite
Switched to knowledge graph: test_overwrite
> +base[(1,), (2,), (3,)].
Inserted 3 fact(s) into 'base'.
> +doubled(X, Y) :- base(X), Y = X * 2, X < 2.
Script error: Failed to register rule: Unsafe rule 'doubled': Head variable(s) Y not bound by any positive body atom. All head variables must appear in at least one positive body predicate.
