examples/datalog/17_rule_commands/19_rule_overwrite.dl
% Test: Rule overwrite behavior
% Expected: Adding same rule head adds clause
% Category: 17_rule_commands
% Priority: P2 - Rule management

.kg create test_overwrite
.kg use test_overwrite

+base[(1,), (2,), (3,)].

% First clause
+doubled(X, Y) :- base(X), Y = X * 2, X < 2.

?- doubled(X, Y).

% Add another clause
+doubled(X, Y) :- base(X), Y = X * 2, X >= 2.

?- doubled(X, Y).

.rule def doubled

.kg use default
.kg drop test_overwrite
